--- a/binbin/task-9/demo.html
+++ b/binbin/task-9/demo.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JavaScript和树（二）</title>
+    <title>JavaScript和树（三）</title>
     <style media="screen">
       div{
         padding: 10px 5px;
@@ -46,6 +46,9 @@
     <input type="text" name="name" value="">
     <button type="button" name="button">BFC</button>
     <button type="button" name="button">DFC</button>
+    <button type="button" name="button">删除节点</button>
+    <input type="text" name="name" placeholder="输入节点信息">
+    <button type="button" name="button">添加节点</button>
     <section>
       <div class="box">
         Super
